Add links to twitter and gitter.

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -8,48 +8,27 @@
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-lg-3">
-            <h3>Email</h3>
-            <p>
-                You can contact me by
-                <script type="text/javascript" language="javascript">
-                <!--
-                // Email obfuscator script 2.1 by Tim Williams, University of Arizona
-                // Random encryption key feature by Andrew Moulden, Site Engineering Ltd
-                // This code is freeware provided these four comment lines remain intact
-                // A wizard to generate this code is at http://www.jottings.com/obfuscator/
-                { coded = "WnEHJG@WnEHJG.Gq"
-                key = "ufgXU1q9tAxmzM7cnGbiaLRjETsdFS452lNwJhV8KIYpk3O6vWoerHyPCZB0QD"
-                shift=coded.length
-                link=""
-                for (i=0; i<coded.length; i++) {
-                    if (key.indexOf(coded.charAt(i))==-1) {
-                        ltr = coded.charAt(i)
-                        link += (ltr)
-                    }
-                    else {
-                        ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
-                        link += (key.charAt(ltr))
-                    }
-                }
-                document.write("<a href='mailto:"+link+"'>email</a>")
-            }
-            //-->
-            </script><noscript>email (please enable JavaScript to get the email adress)</noscript>
-            for any question about the code, or help.
-        </p>
-        </div>
-
         <div class="col-lg-4">
-            <h3>Who is behind Chemfiles</h3>
-            <p>Chemfiles is developed by Guillaume Fraux, a PhD student in computational
-            chemistry in Paris.</p>
+            <h3>Contacting us</h3>
+
+            <p>You can talk with us on our
+            <a href="https://gitter.im/chemfiles/chemfiles">gitter</a>
+            chat room. We are also on twitter with the
+            <a href="https://twitter.com/libchemfiles">@libchemfiles</a> user
+            name</p>
         </div>
 
         <div class="col-lg-4">
             <h3>Features requests and bugs</h3>
             <p>Please send feature request or bug reports using
             <a href="http://github.com/chemfiles/chemfiles/issues">Github issues</a>.</p>
+        </div>
+
+        <div class="col-lg-4">
+            <h3>Who is behind Chemfiles?</h3>
+            <p>Chemfiles is developed by <a href="http://guillaume.fraux.fr">
+                Guillaume Fraux</a>, a PhD student in computational chemistry
+                in Paris.</p>
         </div>
     </div>
 </div>
