Ensure that the doc page is deployed

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -30,7 +30,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3">
-                    <a href="doc/index.html">
+                    <a href="documentation.html">
                         <button class="btn-primary flat-btn" type="button" name="Documentation">
                             <span class="mega-octicon octicon-flame" aria-hidden="true"></span>
                             Documentation
