--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -17,7 +17,8 @@
         <div class="col-lg-4">
             <ul>
                 <li><a href="/chemfiles/latest/">Latest developement version</a></li>
-                <li><a href="/chemfiles/0.7.4/">Stable version: 0.7.4</a></li>
+                <li><a href="/chemfiles/0.8.0/">Stable version: 0.8.0</a></li>
+                <li><a href="/chemfiles/0.7.4/">Version: 0.7.4</a></li>
                 <li><a href="/chemfiles/0.6.0/">Version 0.6.0</a></li>
                 <li><a href="/chemfiles/0.5.0/">Version 0.5.0</a></li>
                 <li><a href="/chemfiles/0.4.0/">Version 0.4.0</a></li>
@@ -37,7 +38,8 @@
         <div class="col-lg-4">
             <ul>
                 <li><a href="/chemfiles.py/latest/">Latest developement version</a></li>
-                <li><a href="/chemfiles.py/0.7.4/">Stable version: 0.7.4</a></li>
+                <li><a href="/chemfiles.py/0.8.0/">Stable version: 0.8.0</a></li>
+                <li><a href="/chemfiles.py/0.7.4/">Version: 0.7.4</a></li>
                 <li><a href="/chemfiles.py/0.6.0/">Version 0.6.0</a></li>
                 <li><a href="/chemfiles.py/0.5.0/">Version 0.5.0</a></li>
                 <li><a href="/chemfiles.py/0.4.0/">Version 0.4.0</a></li>
@@ -58,7 +60,8 @@
         <div class="col-lg-4">
             <ul>
                 <li><a href="/chemfiles.f03/latest/">Latest developement version</a></li>
-                <li><a href="/chemfiles.f03/0.7.4/">Stable version: 0.7.4</a></li>
+                <li><a href="/chemfiles.f03/0.8.0/">Stable version: 0.8.0</a></li>
+                <li><a href="/chemfiles.f03/0.7.4/">Version: 0.7.4</a></li>
                 <li><a href="/chemfiles.f03/0.6.0/">Version 0.6.0</a></li>
                 <li><a href="/chemfiles.f03/0.5.0/">Version 0.5.0</a></li>
             </ul>
@@ -78,7 +81,8 @@
         <div class="col-lg-4">
             <ul>
                 <li><a href="/chemfiles.jl/latest/">Latest developement version</a></li>
-                <li><a href="/chemfiles.jl/v0.7.4/">Stable version: 0.7.4</a></li>
+                <li><a href="/chemfiles.jl/v0.8.0/">Stable version: 0.8.0</a></li>
+                <li><a href="/chemfiles.jl/v0.7.4/">Version: 0.7.4</a></li>
                 <li><a href="/chemfiles.jl/v0.6.0/">Version 0.6.0</a></li>
                 <li><a href="/chemfiles.jl/v0.5.0/">Version 0.5.0</a></li>
                 <li><a href="/chemfiles.jl/v0.4.0/">Version 0.4.0</a></li>
@@ -99,7 +103,8 @@
         <div class="col-lg-4">
             <ul>
                 <li><a href="/chemfiles.rs/latest/">Latest developement version</a></li>
-                <li><a href="/chemfiles.rs/0.7.40/">Stable version: 0.7.40</a></li>
+                <li><a href="/chemfiles.rs/0.8.0/">Stable version: 0.8.0</a></li>
+                <li><a href="/chemfiles.rs/0.7.40/">Version: 0.7.40</a></li>
                 <li><a href="/chemfiles.rs/0.7.4/">Version 0.7.4</a></li>
                 <li><a href="/chemfiles.rs/0.5.0/">Version 0.5.0</a></li>
                 <li><a href="/chemfiles.rs/0.4.0/">Version 0.4.0</a></li>
