--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -217,6 +217,8 @@
                         // velocities, you will find them here.
                     }
 
+                    chfl_close(file);
+                    chfl_free(frame);
                     return EXIT_SUCCESS;
                 }
             {% endfilter %}
@@ -225,30 +227,27 @@
             {% filter highlight:"Fortran" %}
                 program example
                     use chemfiles
-                    use iso_fortran_env, only: real64, int64
+                    use iso_fortran_env, only: real64
                     implicit none
 
                     type(chfl_trajectory) :: file
                     type(chfl_frame) :: frame
                     real(real64), dimension(:, :), pointer :: positions, velocities
-                    integer(int64) :: natoms = 0
-                    logical :: has_velocities = .false.
 
                     call file%open("filename.xyz", "r", status=status)
                     if (status /= 0) stop
 
-                    call frame%init(0)
+                    call frame%init()
                     call file%read(frame, status=status)
                     if (status /= 0) stop
 
-                    call frame%positions(positions, natoms)
-                    write(*, *) "There are", natoms, "atoms in the frame"
+                    positions => frame%positions()
+                    write(*, *) "There are", size(positions, 2), "atoms in the frame"
 
                     ! Do awesome science here with the positions
 
-                    call frame%has_velocities(has_velocities)
-                    if (has_velocities) then
-                        call frame%velocities(velocities, natoms)
+                    if (frame%has_velocities()) then
+                        velocities => frame%velocities()
 
                         ! If the file contains information about the
                         ! velocities, you will find them here.
@@ -263,38 +262,39 @@
                 file = Trajectory("filename.xyz")
                 frame = file.read()
 
-                print("There are {} atoms in the frame".format(frame.natoms()))
-                positions = frame.positions()
+                print("There are {} atoms in the frame".format(len(frame.atoms)))
+                positions = frame.positions
 
                 # Do awesome science here with the positions
 
                 if frame.has_velocities():
-                    velocities = frame.velocities()
+                    velocities = frame.velocities
                     # If the file contains information about the
                     # velocities, you will find them here.
             {% endfilter %}
         </div>
         <div id="rust-example" class="tab-pane fade">
             {% filter highlight:"Rust" %}
-                extern crate chemfiles;
-                use self::chemfiles::Trajectory;
+                use chemfiles::Trajectory;
 
-                fn main() {
+                fn main() -> Result<(), Box<std::error::Error>> {
                     let file = Trajectory("filename.xyz", "r")?;
 
                     let frame = file.read()?;
-                    println!("There are {} atoms in the frame",  frame.natoms()?);
-                    let positions = frame.positions()?;
+                    println!("There are {} atoms in the frame",  frame.natoms());
+                    let positions = frame.positions();
 
                     // Do awesome science here with the positions
 
-                    if frame.has_velocities()? {
-                        let velocities = frame.velocities()?;
+                    if frame.has_velocities() {
+                        let velocities = frame.velocities();
 
                         // If the file contains information about the
                         // velocities, you will find them here.
                     }
                 }
+
+                return OK(());
             {% endfilter %}
         </div>
         <div id="julia-example" class="tab-pane fade">
@@ -304,7 +304,7 @@
                 file = Trajectory("filename.xyz")
                 frame = read(file)
 
-                println("There are $(frame.natoms()) atoms in the frame")
+                println("There are $(size(frame)) atoms in the frame")
                 pos = positions(frame);
 
                 # Do awesome science here with the positions
