Rewrite generator to use jinja instead of cactus
Cactus seems to be no longer maintained, and do not work anymore

--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -9,7 +9,7 @@
     <br /><br /><br />
     <div class="row">
         <div class="col-lg-3">
-            <img width="80em" class="center-block" src="{% static '/static/images/logo-cxx.png' %}" alt="C++ logo" />
+            <img width="80em" class="center-block" src="/static/images/logo-cxx.png" alt="C++ logo" />
         </div>
         <div class="col-lg-3">
             <h2>C++ or C</h2>
@@ -31,7 +31,7 @@
     <br /><br />
     <div class="row">
         <div class="col-lg-3">
-            <img width="80em" class="center-block" src="{% static '/static/images/logo-python.png' %}" alt="Python logo" />
+            <img width="80em" class="center-block" src="/static/images/logo-python.png" alt="Python logo" />
         </div>
         <div class="col-lg-3">
             <h2>Python</h2>
@@ -54,7 +54,7 @@
     <br /><br />
     <div class="row">
         <div class="col-lg-3">
-            <img width="80em" class="center-block" src="{% static '/static/images/logo-fortran.png' %}" alt="Fortran logo" />
+            <img width="80em" class="center-block" src="/static/images/logo-fortran.png" alt="Fortran logo" />
         </div>
         <div class="col-lg-3">
             <h2>Fortran</h2>
@@ -76,7 +76,7 @@
     <br /><br />
     <div class="row">
         <div class="col-lg-3">
-            <img width="80em" class="center-block" src="{% static '/static/images/logo-julia.png' %}" alt="Julia logo" />
+            <img width="80em" class="center-block" src="/static/images/logo-julia.png" alt="Julia logo" />
         </div>
         <div class="col-lg-3">
             <h2>Julia</h2>
@@ -99,7 +99,7 @@
     <br /><br />
     <div class="row">
         <div class="col-lg-3">
-            <img width="80em" class="center-block" src="{% static '/static/images/logo-rust.png' %}" alt="Rust logo" />
+            <img width="80em" class="center-block" src="/static/images/logo-rust.png" alt="Rust logo" />
         </div>
         <div class="col-lg-3">
             <h2>Rust</h2>
