--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -26,9 +26,9 @@
 
         <div class="col-lg-4">
             <h3>Who is behind Chemfiles?</h3>
-            <p>Chemfiles is developed by <a href="http://guillaume.fraux.fr">
-                Guillaume Fraux</a>, a PhD student in computational chemistry
-                in Paris.</p>
+            <p>Chemfiles was created by <a href="http://guillaume.fraux.fr">
+            Guillaume Fraux</a>, and is the work of multiple awesome
+            <a href="https://github.com/chemfiles/chemfiles/blob/master/AUTHORS">contributors</a>.</p>
         </div>
     </div>
 </div>
